examples/test/testpolicy7598.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7598
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key19: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value45
          key5: value6
          key3: value40
      podSelector:
        matchLabels:
          key29: value36
